# heatTransferSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  in.txt
include/: InputParser.h  room.h
lib/googletest/googletest/cmake/: internal_utils.cmake
src/: CMakeLists.txt  InputParser.cpp  main.cpp  room.cpp
test/: CMakeLists.txt  basic_tests.cpp
